[package]
name = "pls"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
dotenv = "0.15"
leptos = { version = "0.7", features = ["csr"] }
leptos_actix = {version = "0.7", optional = true }
leptos_router = "0.7.7"
console_log = "1.0.0"
log = "0.4.25"
dotenvy = {version="0.15.7", optional = true }
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.8", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1.7"
leptos_meta = {version = "0.7.7", features = ["ssr"]}

[package.metadata.leptos]
projects = ["pls"]
output-name = "name"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[features]
default = ["csr"]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["dep:actix-files", "dep:actix-web", "dep:leptos_actix", "leptos/ssr"]
